--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "develop": "gatsby develop -p 9090",
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
     "deploy": "gatsby build && cp ./src/CNAME public/ &&  gh-pages -d public",
