--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-plugin-google-analytics": "^2.8.0",
     "gatsby-plugin-mdx": "^1.7.0",
     "gatsby-plugin-react-helmet": "^3.7.0",
+    "gatsby-plugin-react-helmet-canonical-urls": "^1.4.0",
     "gatsby-plugin-sharp": "^2.11.1",
     "gatsby-plugin-typography": "^2.9.0",
     "gatsby-remark-images": "^3.8.0",
